Treat pattern name as UTF-8 when loading a .pat resource

GIMP pattern names are stored as null-terminated UTF-8 strings, but we were
loading them as Latin-1.

BUG: 453637

References:
(UTF-8) https://developer.gimp.org/core/standards/pat/
(Null-termination) https://gitlab.gnome.org/GNOME/gimp/-/blob/127cd67118727ef9086c829e66b7894c72c2ef98/app/core/gimppattern-header.h#L42

(cherry picked from commit e29cf8b578c177a7090e9301c2cf0e7a871d5ba7)

Co-authored-by: Nicholas LaPointe <nicholaslapointe8@gmail.com>